--- a/package.json
+++ b/package.json
@@ -5,18 +5,26 @@
   "main": "src/index.js",
   "private": true,
   "scripts": {
-    "start": "webpack-dev-server --open",
-    "build": "webpack --mode production"
+    "start": "npx webpack serve",
+    "dev": "webpack --mode development",
+    "prod": "webpack --mode production",
+    "debug": "NODE_OPTIONS='--openssl-legacy-provider' next start -p 5000"
   },
   "keywords": [],
   "author": "Vladilen Minin <vladilen.minin@gmail.com>",
   "license": "ISC",
   "devDependencies": {
-    "css-loader": "^3.4.2",
-    "html-webpack-plugin": "^3.2.0",
-    "style-loader": "^1.1.3",
-    "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
+    "html-webpack-plugin": "^5.5.0",
+    "webpack-dev-server": "^4.11.1",
+    "filemanager-webpack-plugin": "^8.0.0",
+    "postcss-loader": "^7.0.2",
+    "postcss-preset-env": "^7.8.3",
+    "css-loader": "^6.7.3",
+    "style-loader": "^3.3.1",
+    "mini-css-extract-plugin": "^2.7.2",
+    "cross-env": "^7.0.3",
+    "clean-webpack-plugin": "^4.0.0"
   }
 }
