--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "style-loader": "^3.3.1",
     "mini-css-extract-plugin": "^2.7.2",
     "cross-env": "^7.0.3",
-    "clean-webpack-plugin": "^4.0.0"
+    "clean-webpack-plugin": "^4.0.0",
+    "babel-loader": "^9.1.2",
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2"
   }
 }
