--- a/package.json
+++ b/package.json
@@ -14,20 +14,23 @@
   "author": "Vladilen Minin <vladilen.minin@gmail.com>",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1",
-    "html-webpack-plugin": "^5.5.0",
-    "webpack-dev-server": "^4.11.1",
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
+    "babel-loader": "^9.1.2",
+    "clean-webpack-plugin": "^4.0.0",
+    "cross-env": "^7.0.3",
+    "css-loader": "^6.7.3",
     "filemanager-webpack-plugin": "^8.0.0",
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.7.2",
     "postcss-loader": "^7.0.2",
     "postcss-preset-env": "^7.8.3",
-    "css-loader": "^6.7.3",
     "style-loader": "^3.3.1",
-    "mini-css-extract-plugin": "^2.7.2",
-    "cross-env": "^7.0.3",
-    "clean-webpack-plugin": "^4.0.0",
-    "babel-loader": "^9.1.2",
-    "@babel/core": "^7.20.12",
-    "@babel/preset-env": "^7.20.2"
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1"
+  },
+  "dependencies": {
+    "redux": "^4.2.0"
   }
 }
