--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "redux-devtools-extension": "^2.13.9"
   }
 }
